# TFG-Donacion-Renal-ml-web

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
data/processed/: cleaning_report.json  dataset_mid_clean.csv  dataset_mid_synthetic.csv  dataset_transfer_clean.csv  dataset_transfer_synthetic.csv  synthetic_report.json
data/raw/: dataset_medicos.xlsx  ~$dataset_medicos.xlsx
docs/: README.md  pipeline_overview.md
outputs/exploratory_analysis/: eda_report.json
outputs/final_model_export/: final_metrics.json  final_model.joblib  final_model_metadata.json  final_models_report.json
outputs/final_model_export/mid/: final_metrics.json  final_model.joblib  final_model_metadata.json
outputs/final_model_export/transfer/: final_metrics.json  final_model.joblib  final_model_metadata.json
outputs/model_evaluation/: final_comparison_report.json  final_evaluation_report.json  test_predictions.csv
outputs/model_evaluation/mid/: final_evaluation_report.json  final_metrics.json  test_predictions.csv
src/: main.py
src/01_data_cleaning/: __init__.py  clean_data.py  generate_synthetic_data.py  main.py
src/01_data_cleaning/modules/: __init__.py  (+6 more)
src/02_exploratory_analysis/: __init__.py  main.py
src/03_model_training/: __init__.py  main.py
src/04_model_evaluation/: __init__.py  main.py  train.py
src/05_final_model_export/: __init__.py  main.py
src/common/: __init__.py  visual_logger.py
web/backend/: main.py  model_loader.py
web/frontend/: admin.html  app.js  editar-perfil.html  firebase-config.js  index.html  medico.html  styles.css
(+690 files in other folders)
